tests/more_path/more_path.exp
Error: Sigma.js:13
 13:     x.c(); // error
           ^ property `c`. Property not found in
 13:     x.c(); // error
         ^ B

Error: Sigma.js:15
 15:     x++; // TODO no error? since unreachable (x: B implies x: A)
         ^^^ number. This type is incompatible with
 10: function bar(x:B) {
                    ^ B

Error: Sigma.js:24
 24:     x.d(); // error
           ^ property `d`. Property not found in
 24:     x.d(); // error
         ^ C

Error: Sigma.js:27
 27:     x.c(); // error
           ^ property `c`. Property not found in
 27:     x.c(); // error
         ^ A

Error: Sigma.js:35
 35:   if (x instanceof A) {
                        ^ A. This type is incompatible with
 34: function baz(x:D) {
                    ^ D

Error: test.js:11
 11:     return obj.childProp_TYPO; // error (obj: ChildClass)
                    ^^^^^^^^^^^^^^ property `childProp_TYPO`. Property not found in
 11:     return obj.childProp_TYPO; // error (obj: ChildClass)
                ^^^ ChildClass


Found 6 errors
